--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,9 +3,12 @@
   %head
     %title PHPcasts - Free PHP screencasts
     %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
-    %link{"rel" => "stylesheet", "href" => "http://kernest.com/fonts/essays-1743-bold-italic.css", "type" => "text/css"}
-    %link{"rel" => "stylesheet", "href" => "/style.css", "type" => "text/css"}
+    %link{:rel => "stylesheet", :href => "http://kernest.com/fonts/essays-1743-bold-italic.css", :type => "text/css"}
+    %link{:rel => "stylesheet", :href => "/style.css", :type => "text/css"}
+    %link{:rel => "alternate", :type => "application/rss+xml", :title => "Episodes RSS", :href => "/feed"}
   %body
+    %a{:href => "http://github.com/halfdan/phpcasts"}
+      %img{:src => "https://d3nwyuy0nl342s.cloudfront.net/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67", :alt => "Fork me on GitHub", :style => "position: absolute; top: 0; right: 0; border: 0;"}
     #container
       %header
         %a{:href => '/'}
