--- a/views/episode.haml
+++ b/views/episode.haml
@@ -1,7 +1,7 @@
 .episode
-  %h3.title= "##{episode.id} #{episode.name}"
-  %p.date= episode.created_at.strftime("%A, %B %d, %Y")
-  %video{:controls => true, :width => 500}
-    - episode.videos.each do |video|
-      %source{:src => video.filename, :type => video.format}
-  %p.body= episode.content
+  %h3.title= "##{@episode.id} #{@episode.name}"
+  %p.date= @episode.created_at.strftime("%A, %B %d, %Y")
+  = partial :'episode/video', :locals => { :episode => @episode }
+  %p.body= @episode.content
+
+%a{:href => "/login?return_to=#{u current_url}"} You must sign in through GitHub to post a comment.
