--- a/public/style.css
+++ b/public/style.css
@@ -11,15 +11,15 @@
 	margin: 0;
 }
 
-a {
-	text-decoration: none;
-	color: #000;
-}
-
 body
 {
 	text-align: center;
 	background: #9999CC;
+}
+
+a {
+	color: #000;
+	text-decoration: none;
 }
 
 #container
@@ -62,6 +62,11 @@ header h1
 	font-size: 1.5em;
 }
 
+.episode .title a {
+	text-decoration: none;
+	color: #000;
+}
+
 .episode .date
 {
 	font-size: 0.7em;
@@ -71,7 +76,7 @@ header h1
 
 .episode video
 {
-	margin-top: 10px;
+	margin: 10px 0;
 }
 
 .episode .hr
@@ -80,6 +85,11 @@ header h1
 	text-align: center;
 	line-height: 0.875;
 	text-shadow: 0 0 2px #666677;
+}
+
+.content a {
+	color: #1E97B2;
+	text-decoration: none;
 }
 
 footer
